php-vitexsoftware-ease-fluentpdo (1.1) UNRELEASED; urgency=medium

  * stable version released
  * Dependency fix

 -- CyberVitexus <vitex@exiv.jinonice.czf>  Tue, 18 May 2021 00:22:16 +0200

php-vitexsoftware-ease-fluentpdo (1.0) main; urgency=medium

  * Initial release. (Closes: #XXXXXX)
  * twbootstrap renamed to bootstrap
  * Merge branch 'master' of github.com:VitexSoftware/php-ease-fluentpdo
  * Unit Tests updated
  * Release v0.2.4
  * Merge origin/master
  * Update with null columns fixed
  * Engine Unit Tests

 -- CyberVitexus <vitex@exiv.jinonice.czf>  Tue, 11 Aug 2020 12:48:59 +0200