@@ -18,3 +18,6 @@ docs
 
 /debian/php-vitexsoftware-ease-fluentpdo-doc/
 /.phpunit.result.cache
+
+tests/test.sqlite-shm 
+tests/test.sqlite-wal
