@@ -1,8 +1,7 @@
-APP_NAME=EaseFluenPDQ
 APP_DEBUG=true
-DB_CONNECTION=sqlite
+DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=tests/test.sqlite
-DB_USERNAME=
-DB_PASSWORD=
+DB_DATABASE=easetest
+DB_USERNAME=easetest
+DB_PASSWORD=easetest
