@@ -1,7 +1,7 @@
 {
   "name": "deb/ease-fluentpdo",
   "description": "SQL/PDO support for Ease Framework based on FluentPDO",
-  "version": "1.0",
+  "version": "1.1",
   "authors": [
     {
       "name": "Vitex",
